Account ci_idepth in VR_INTR() and TX_INTR, rather than cpu_intr() in hpcmips/interrupt.c. The latter one is used only on kernels configured for multiple CPUs (i.e. kernels which have both options VR41XX and TX39XX).

Closes PR port-hpcmips/38139 from Risto Sainio.